--- a/services.html
+++ b/services.html
@@ -7,142 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/services.css">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #0f1217;
-      color: #e0e0e0;
-    }
-
-    .site-header {
-      background: #161b22;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .brand {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      font-size: 1.6rem;
-      color: #00bfff;
-      text-decoration: none;
-    }
-
-    nav.nav a {
-      margin-left: 1.5rem;
-      color: #cbd5e0;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    nav.nav a.active {
-      color: #00bfff;
-    }
-
-    main {
-      padding: 3rem 1.5rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    h1 {
-      font-family: 'Poppins', sans-serif;
-      color: #00bfff;
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-
-    /* ================= Services Section ================= */
-    .service-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-
-    .service-card {
-      background: #161b22;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 191, 255, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(0, 191, 255, 0.2);
-    }
-
-    .service-card h3 {
-      margin-bottom: 1rem;
-      color: #00e0ff;
-    }
-
-    .service-card p {
-      color: #cbd5e0;
-    }
-
-    /* ================= Why Choose Me Section ================= */
-    .why-choose {
-      margin-top: 5rem;
-    }
-
-    .why-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-
-    .why-card {
-      background: #161b22;
-      padding: 1.8rem 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 191, 255, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .why-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 30px rgba(0, 191, 255, 0.2);
-    }
-
-    .why-card h4 {
-      color: #00e0ff;
-      margin-bottom: 0.8rem;
-      font-size: 1.2rem;
-    }
-
-    .why-card p {
-      color: #cbd5e0;
-      line-height: 1.5;
-    }
-
-    footer.site-footer {
-      background: #161b22;
-      padding: 2rem;
-      text-align: center;
-      color: #888;
-      font-size: 0.9rem;
-    }
-
-    .copyright {
-      text-align: center;
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #888;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.6rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <!-- ================= Header / Navigation ================= -->
@@ -156,7 +20,7 @@
         <a href="blog.html">Blog</a>
         <a href="services.html" class="active">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
-        <a href="about.html">About</a>
+        <!-- <a href="about.html">About</a> -->
       </nav>
       <div class="nav-actions">
         <button id="themeToggle6" class="icon-btn" aria-label="Toggle theme">🌙</button>
@@ -165,54 +29,67 @@
     </div>
   </header>
 
+  <!-- ================= Mobile Navigation ================= -->
+  <div id="mobileNav" class="mobile-nav">
+    <button id="closeMobileNav" class="close-nav">×</button>
+    <nav class="mobile-links">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="skills.html">Skills</a>
+      <a href="blog.html">Blog</a>
+      <a href="services.html" class="active">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+
   <!-- ================= Main Content ================= -->
   <main>
     <!-- ================= Services Section ================= -->
     <section class="services" data-reveal>
-      <h1>Services I Offer</h1>
+      <h1 style="font-size: clamp(2rem, 5vw, 3.5rem); text-align: center; margin-bottom: 3rem;">What I Can Do For You</h1>
       <div class="service-grid">
         <div class="service-card">
           <h3>Web Applications</h3>
-          <p>From MVP to production — React frontends with Django backends and tested APIs.</p>
+          <p>Build full-stack apps from scratch. React for the front, Django for the back, and everything tested.</p>
         </div>
         <div class="service-card">
           <h3>UI/UX Design</h3>
-          <p>Design systems, high-fidelity prototypes, and user research to validate ideas quickly.</p>
+          <p>Design interfaces that make sense. I focus on usability first, then make it look good.</p>
         </div>
         <div class="service-card">
           <h3>Infrastructure & Networking</h3>
-          <p>Secure network setups, monitoring, and automation for reliable production deployments.</p>
+          <p>Set up servers, networks, and monitoring. Make sure things stay up and running smoothly.</p>
         </div>
         <div class="service-card">
           <h3>AI Integration</h3>
-          <p>Implement AI features like chat assistants, summarizers, and automation workflows.</p>
+          <p>Add AI features to your apps. Chatbots, automation, and tools that actually save time.</p>
         </div>
       </div>
     </section>
 
     <!-- ================= Why Choose Me Section ================= -->
     <section class="why-choose" data-reveal>
-      <h1>Why Choose Me</h1>
+      <h1 style="font-size: clamp(2rem, 5vw, 3.5rem); text-align: center; margin-bottom: 3rem;">Why Work With Me</h1>
       <div class="why-grid">
         <div class="why-card">
-          <h4>Professional Expertise</h4>
-          <p>I combine deep technical knowledge with modern design principles to deliver robust and user-friendly solutions.</p>
+          <h4>I Get Things Done</h4>
+          <p>I ship working code, not promises. Projects get finished on time, and they actually work.</p>
         </div>
         <div class="why-card">
-          <h4>Reliable & Hardworking</h4>
-          <p>I prioritize deadlines and ensure projects are completed efficiently without compromising quality.</p>
+          <h4>Straightforward Communication</h4>
+          <p>No jargon, no fluff. I'll tell you what's happening, what's possible, and what's not.</p>
         </div>
         <div class="why-card">
-          <h4>Trust & Transparency</h4>
-          <p>Clear communication and full transparency with clients build trust and long-term professional relationships.</p>
+          <h4>Practical Solutions</h4>
+          <p>I build what you need, not what's trendy. Simple, maintainable, and actually useful.</p>
         </div>
         <div class="why-card">
-          <h4>Innovative Solutions</h4>
-          <p>I bring creative and future-proof solutions tailored to client needs, leveraging the latest technology trends.</p>
+          <h4>I Care About Quality</h4>
+          <p>Code that's readable, tested, and won't break in six months. That's the standard.</p>
         </div>
         <div class="why-card">
-          <h4>Client Satisfaction</h4>
-          <p>Your success is my priority — I focus on delivering high-quality outcomes that exceed expectations.</p>
+          <h4>Fair Pricing</h4>
+          <p>You get what you pay for, and I make sure it's worth it. No surprises, no hidden costs.</p>
         </div>
       </div>
     </section>
@@ -223,22 +100,22 @@
     <div class="container footer-grid">
       <div>
         <strong>Kelvin Mutwiri</strong>
-        <p>Full‑Stack Developer & Designer — building delightful web experiences.</p>
+        <p>Building things that work, look good, and don't break.</p>
       </div>
       <div>
         <h4>Contact</h4>
         <ul class="socials">
-          <a href="mailto:kelvinkiambi35@gmail.com">Email</a>
-          <a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">LinkedIn</a>
-          <a href="https://github.com/kelvin482" target="_blank">GitHub</a>
-          <a href="#">Twitter</a>
-          <a href="tel:+25493610003">Phone</a>
+          <li><a href="mailto:kelvinkiambi35@gmail.com">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank" rel="noopener">LinkedIn</a></li>
+          <li><a href="https://github.com/kelvin482" target="_blank" rel="noopener">GitHub</a></li>
+          <li><a href="https://twitter.com/kelvin_kiambi" target="_blank" rel="noopener">Twitter</a></li>
+          <li><a href="tel:+254746310313">Phone</a></li>
         </ul>
       </div>
       <div>
         <h4>Site</h4>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <!-- <a href="about.html">About</a> -->
         <a href="projects.html">Projects</a>
       </div>
     </div>
@@ -248,9 +125,13 @@
   </footer>
 
   <!-- ================= Scripts ================= -->
+  <!-- Configuration must load first -->
+  <script src="assets/js/config.js"></script>
+  <!-- Core modules -->
+  <script src="assets/js/theme.js"></script>
+  <script src="assets/js/navigation.js"></script>
+  <script src="assets/js/animations.js"></script>
+  <!-- Main script -->
   <script src="assets/js/script.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
